# ds2000

./: .buildinfo  .deepsource.toml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  MANIFEST.in  Pipfile.old  README.md  ds2000.controller.html  ds2000.controller.trigger_subcontrollers.html  ds2000.func.html  ds2000.html  ds2000.math.html  ds2000.py  ds2000.trigger.html  ds2000_maintree.html  genindex.html  index.html  objects.inv  oscilloscope.py  py-modindex.html  pyproject.toml  requirements.txt.old  search.html  searchindex.js  setup.cfg  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pythonpackage.yml  release.yml
_sources/: ds2000.controller.rst.txt  ds2000.rst.txt  ds2000.trigger.rst.txt  ds2000_maintree.rst.txt
_static/: documentation_options.js
docs/source/: conf.py  ds2000.controller.rst  ds2000.controller.trigger_subcontrollers.rst  ds2000.func.rst  ds2000.math.rst  ds2000.rst  ds2000.trigger.rst  ds2000_ds2000.rst  index.rst  modules.rst
ds2000/: __init__.py  __version__.py  _version.py  acquire.py  channel.py  common.py  display.py  enums.py  errors.py  ieee.py  timebase.py  waveform.py
ds2000/controller/: __init__.py  acquire.py  bus.py  calculate.py  calibrate.py  channel.py  common.py  cursor.py  display.py  error_handling.py  errorhandling.py  ieee.py  timebase.py  trigger.py  waveform.py
ds2000/controller/trigger_subcontrollers/: __init__.py  coupling.py  delay.py  duration.py  edge.py  i2c.py  mode.py  nth_edge.py  pattern.py  pulse.py  rs232.py  runt.py  setup_hold.py  slope.py  spi.py  sweep.py  timeout.py  usb.py  video.py  window.py  windows.py
ds2000/func/: __init__.py  plot.py
ds2000/math/: __init__.py  format.py
ds2000/trigger/: __init__.py  coupling.py  delay.py  duration.py  edge.py  i2c.py  mode.py  nth_edge.py  pattern.py  pulse.py  rs232.py  runt.py  setup_hold.py  slope.py  spi.py  sweep.py  timeout.py  usb.py  video.py  windows.py
ds2000/visa/: __init__.py  debug_dummy.py  driver.py  pyvisa.py  pyvisapy.py  vxi11.py
ds2000/visa/debug_driver/: __init__.py  parser.py  state.py
tests/: __init__.py  test_ds2000.py  test_dummy.py  test_package_meta.py
tests/ds2000/trigger/: __init__.py  conftest.py  test_coupling.py  test_delay.py
