# ds2000 - The Python Library for Rigol DS2000 Oscilloscopes
# Copyright (C) 2018  Michael Sasser <Michael@MichaelSasser.org>

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ds2000"
version = "0.0.0.dev0"
description = "The Python Library for Rigol DS2000 Oscilloscopes"
license = "GPL-3.0+"
authors = ["Michael Sasser <Michael@MichaelSasser.org>"]
readme = "README.md"
repository = "https://github.com/MichaelSasser/ds2000"
homepage = "https://github.com/MichaelSasser/ds2000"
documentation = "https://github.com/MichaelSasser/ds2000"
keywords = ['DS2000', 'Rigol', 'API']
# Look here for all Classifiers:
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    # 'Development Status :: 3 - Alpha',
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Environment :: Console",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.8"
python-vxi11 = "^0.9.0"
zeroconf = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
neovim = "^0.3.1"
pydocstyle = "^4.0"
pylint = "^2.4"
pycodestyle = "^2.5"
yapf = "^0.29.0"
vulture = "^1.2"
mypy = "^0.750.0"
python-language-server = {version = "^0.31.2", extras = ["all"]}
black = { version = "*", allows-prereleases = true }

[tool.black]
line-length = 80
include = '\.pyi?$'
# exclude __init__.py because of ordered importing
exclude = '''
/(
    \.eggs
  | \.git
  | \.github
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
  | __init__.py
)
'''

[tool.isort]
line_length = 80
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
# not_skip = "__init__.py"
# skip_glob = ["*/setup.py"]
filter_files = true

# [tool.towncrier]
# package = "ds2000"
# filename = "CHANGELOG.rst"
# issue_format = "`#{issue} <https://github.com/MichaelSasser.org/ds2000/issues/{issue}>`_"
# directory = "news/"
# title_format = "{version} ({project_date})"
# template = "news/towncrier_template.rst"
#
#   [[tool.towncrier.type]]
#   directory = "feature"
#   name = "Features & Improvements"
#   showcontent = true
#
#   [[tool.towncrier.type]]
#   directory = "behavior"
#   name = "Behavior Changes"
#   showcontent = true
#
#   [[tool.towncrier.type]]
#   directory = "bugfix"
#   name = "Bug Fixes"
#   showcontent = true
#
#   [[tool.towncrier.type]]
#   directory = "vendor"
#   name = "Vendored Libraries"
#   showcontent = true
#
#   [[tool.towncrier.type]]
#   directory = "doc"
#   name = "Improved Documentation"
#   showcontent = true
#
#   [[tool.towncrier.type]]
#   directory = "trivial"
#   name = "Trivial Changes"
#   showcontent = false
#
#   [[tool.towncrier.type]]
#   directory = "removal"
#   name = "Removals and Deprecations"
#   showcontent = true
